<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">头条联播</string>
    <string name="menu_settings">Settings</string>
    <string name="list_empty">No data</string>
    <string name="empty" />
    <string name="nav_login_lable">您还未登录</string>
    <string name="nav_sub_desc">可同步您的评论,收藏...</string>
    <string name="nav_sub_summary">状态:%1$s \t级别:%2$s</string>
    <string name="nav_my_comment">我的评论</string>
    <string name="nav_offline_download">离线下载</string>
    <string name="nav_setting">设置</string>
	<string name="news_pull_to_refresh_label">头条联播</string>
    
    <string name="news_detail_comment_hint">我要评论</string>
    <string name="news_detail_source">来源：%1$s</string>
    <string name="news_detail_comment_title">精彩评论</string>
    <string name="news_detail_comment_label">我要评论</string>
    <string name="news_detail_comment_src">来源：[%1$s]</string>
    <string name="news_detail_video_lock_tips">视频播放已经锁定，解锁后方可退出</string>

    <string name="comment_title_self_label">我的评论</string>
    <string name="comment_title_friend_label">网友评论</string>
    <string name="comment_edit_bar_label">删除选中的%1$d项</string>
    <string name="schedule_add_task">添加任务 +</string>
    
    <string name="offline_title_label">我的下载</string>
    <string name="download_no_data">您还没有下载</string>
    <string name="comment_no_data">暂时没有评论</string>
    <string name="setting_title_label">系统设置</string>
    
    <string name="alarm_title">闹钟</string>
    <string name="alarm_setting">闹钟设置</string>
    <string name="alarm_repeat_setting">重复设置</string>
    <string name="alarm_enable_clock">启用闹钟</string>
    <string name="alarm_time">时间</string>
    <string name="alarm_repeat">重复</string>
    <string name="alarm_ringtone">铃声</string>
    <string name="alarm_vibrate">震动</string>
    <string name="alarm_delete">删除闹铃</string>
    <string name="alarm_select_ringtone">选择铃声</string>
    <string name="alarm_month_and_day">M月d日  E</string>
    <string name="alarm_close_clock">取消闹钟</string>
    <string name="alarm_close_and_update_news">取消闹钟并更新新闻</string>
    <string name="delete_tips">确认删除?</string>

    <string name="login_title_label">登录账号</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="account">账号</string>
    <string name="password">密码</string>
    <string name="remember_password">记住密码</string>
    <string name="forget_password">找回密码?</string>
    <string name="login_tips">正在登录，请稍后...</string>
    <string name="login_success">登录成功</string>
    
    <string name="register_title_label">注册账号</string>
    <string name="email">邮箱</string>
    <string name="confirm_password">确认密码</string>
	<string name="register_tips">正在注册，请稍后...</string>
	<string name="register_success">注册成功</string>
	<string name="logout">账号注销</string>
	<string name="logout_tips">注销账号?</string>
	<string name="view_comment_tips">查看评论，请先登录</string>
	
    <string name="setting_auto_clear">自动清除过期新闻</string>
    <string name="setting_clear_cache">清除缓存</string>
    <string name="setting_clear_cache_label">清除缓存(%1$s)</string>
    <string name="setting_clear_cache_tips">是否清除缓存?</string>
    
    <string name="share_sina_weibo">新浪微博</string>
    <string name="share_tencent_weibo">腾讯微博</string>
    <string name="share_qzone">QQ空间</string>
    
    <string name="delete">删除</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="back">返回</string>
    <string name="send">发送</string>
    <string name="setting">设置</string>
    
    <string name="add_success_tips">添加成功</string>
    <string name="update_success_tips">编辑成功</string>
    
    <string name="never">永不</string>
    <string name="every_day">每天</string>
    <string name="day_concat">" "</string>
    
    <string name="weather_title_tv">选择城市</string>
    
   	<string name="errcode_success">发送成功</string>
	<string name="errcode_cancel">发送取消</string>
	<string name="errcode_deny">发送被拒绝</string>
	<string name="errcode_unknown">发送返回</string>
</resources>