<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/news_color" >
    <include
        android:id="@id/titlebar"
        layout="@layout/news_title_view" />
    <LinearLayout
        android:id="@+id/post"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/titlebar"
        android:layout_marginLeft="30dip"
        android:layout_marginRight="30dip"
        android:layout_marginTop="30dip"
        android:background="@drawable/login_bg"
        android:gravity="center_vertical" >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:contentDescription="@string/empty"
            android:src="@drawable/login_email" />
        <EditText
            android:id="@+id/postView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="18dip"
            android:background="@android:color/transparent"
            android:hint="@string/email"
            android:singleLine="true"
            android:inputType="textEmailAddress"
            android:textColor="@color/news_font_color"
            android:textSize="16sp" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/pass"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/post"
        android:layout_marginLeft="30dip"
        android:layout_marginRight="30dip"
        android:layout_marginTop="10dip"
        android:background="@drawable/login_bg"
        android:gravity="center_vertical" >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:contentDescription="@string/empty"
            android:src="@drawable/login_key" />
        <EditText
            android:id="@+id/passView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="18dip"
            android:background="@android:color/transparent"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColor="@color/news_font_color"
            android:textSize="16sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pass"
        android:layout_marginLeft="30dip"
        android:layout_marginRight="30dip"
        android:layout_marginTop="10dip"
        android:background="@drawable/login_bg"
        android:gravity="center_vertical" >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:contentDescription="@string/empty"
            android:src="@drawable/login_key" />
        <EditText
            android:id="@+id/rePassView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="18dip"
            android:background="@android:color/transparent"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColor="@color/news_font_color"
            android:textSize="16sp" />
    </LinearLayout>
    <LinearLayout
        android:id="@id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="45dip"
        android:layout_alignParentBottom="true"
        android:background="@color/news_color"
        android:orientation="horizontal" >
        <TextView
            android:id="@+id/cancel"
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/list_item_selector"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/cancel"
            android:textColor="@color/news_font_color"
            android:textSize="16sp" />
        <View
            android:layout_width="1dip"
            android:layout_height="fill_parent"
            android:background="#d1d1d1" />
        <TextView
            android:id="@+id/register"
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/list_item_selector"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/register"
            android:textColor="@color/news_font_color"
            android:textSize="16sp" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:layout_above="@id/toolbar"
        android:background="#d1d1d1" />
</RelativeLayout>