<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <LinearLayout
        android:id="@+id/dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/news_color"
        android:orientation="horizontal" >
        <TextView
            android:id="@+id/ic_sina"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/list_item_selector"
            android:drawableTop="@drawable/ic_sina"
            android:gravity="center"
            android:paddingBottom="10dip"
            android:paddingTop="10dip"
            android:singleLine="true"
            android:text="@string/share_sina_weibo"
            android:textColor="#999999"
            android:textSize="14sp" />
        <View
            android:layout_width="0.5dip"
            android:layout_height="fill_parent"
            android:background="#d1d1d1" />
        <TextView
            android:id="@+id/ic_tencent"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/list_item_selector"
            android:drawableTop="@drawable/ic_tencent"
            android:gravity="center"
            android:paddingBottom="10dip"
            android:paddingTop="10dip"
            android:singleLine="true"
            android:text="@string/share_tencent_weibo"
            android:textColor="#999999"
            android:textSize="14sp" />
        <View
            android:layout_width="0.5dip"
            android:layout_height="fill_parent"
            android:background="#d1d1d1" />
        <TextView
            android:id="@+id/ic_qzone"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/list_item_selector"
            android:drawableTop="@drawable/ic_qzone"
            android:gravity="center"
            android:paddingBottom="10dip"
            android:paddingTop="10dip"
            android:singleLine="true"
            android:text="@string/share_qzone"
            android:textColor="#999999"
            android:textSize="14sp" />
    </LinearLayout>
</FrameLayout>