<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f5f6f5" >
    <include layout="@layout/news_detail_title_bar" />
    <FrameLayout
        android:id="@+id/fl_video"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_bar"
        android:background="#292a2c"
        android:padding="8dip" >
        <View
            android:id="@+id/videoview"
            android:layout_width="fill_parent"
            android:layout_height="150dip"
            android:background="@android:color/black" />
    </FrameLayout>
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fl_video" >
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="40dip"
            android:paddingLeft="8dip"
            android:paddingRight="8dip" >
            <TextView
                android:id="@+id/news_detail_desc"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:textColor="@android:color/black"
                android:textSize="16sp" />
            <ImageView
                android:id="@+id/ic_down"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginRight="10dip"
                android:layout_marginTop="5dip"
                android:contentDescription="@string/empty"
                android:src="@drawable/ic_down"
                android:visibility="visible" />
            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip" >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:text="@string/news_detail_comment_title"
                    android:textColor="#b94e4f"
                    android:textSize="18sp" />
                <TextView
                    android:id="@+id/repost_btn"
                    android:layout_width="80dip"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="10dip"
                    android:background="#a90000"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:paddingBottom="3dip"
                    android:paddingTop="3dip"
                    android:singleLine="true"
                    android:text="@string/news_detail_comment_label"
                    android:textColor="@android:color/white"
                    android:textSize="14sp" />
                <View
                    android:layout_width="fill_parent"
                    android:layout_height="2dip"
                    android:layout_below="@+id/repost_btn"
                    android:layout_marginTop="10dip"
                    android:background="#a90000" />
            </RelativeLayout>
            <com.pps.news.widget.CommentPanel
                android:id="@+id/news_detail_comment"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip" />
        </LinearLayout>
    </ScrollView>
    <RelativeLayout
        android:id="@+id/news_repost_bar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@android:color/background_light"
        android:paddingBottom="5dip"
        android:paddingLeft="8dip"
        android:paddingRight="8dip"
        android:paddingTop="5dip"
        android:visibility="gone" >
        <TextView
            android:id="@+id/btn_comment_send"
            android:layout_width="48dip"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="8dip"
            android:gravity="center"
            android:text="@string/send" />
        <EditText
            android:id="@+id/edt_comment_conent"
            android:layout_width="fill_parent"
            android:layout_height="35dip"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/btn_comment_send"
            android:background="#d6d6d6"
            android:hint="@string/news_detail_comment_hint"
            android:paddingLeft="8dip"
            android:textSize="14sp" />
    </RelativeLayout>
</RelativeLayout>