<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/news_color" >
    <include
        android:id="@id/titlebar"
        layout="@layout/alarm_setting_view" />
    <ViewStub
        android:id="@id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout="@layout/news_bottom_view" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/titlebar"
        android:orientation="vertical" >
        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="@dimen/alarm_item_height"
            android:paddingLeft="@dimen/alarm_item_padding" >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center_vertical"
                android:text="@string/alarm_enable_clock"
                android:textColor="@color/news_font_color"
                android:textSize="16sp" />
            <CheckBox
                android:id="@+id/sub_enable"
                style="@style/checkBoxstyle"
                android:layout_gravity="right|center_vertical"
                android:layout_marginRight="15dip"
                android:checked="true" />
        </FrameLayout>
        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="@color/news_divide" />
        <FrameLayout
            android:id="@+id/setting_time"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/alarm_item_height"
            android:clickable="true"
            android:descendantFocusability="blocksDescendants"
            android:paddingLeft="@dimen/alarm_item_padding"
            android:paddingRight="@dimen/alarm_item_padding" >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center_vertical"
                android:text="@string/alarm_time"
                android:textColor="@color/news_font_color"
                android:textSize="16sp" />
            <TextView
                android:id="@+id/sub_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center_vertical"
                android:textColor="@color/setting_font_color"
                android:textSize="14sp" />
        </FrameLayout>
        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="@color/news_divide" />
        <FrameLayout
            android:id="@+id/setting_repeat"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/alarm_item_height"
            android:clickable="true"
            android:descendantFocusability="blocksDescendants"
            android:paddingLeft="@dimen/alarm_item_padding"
            android:paddingRight="@dimen/alarm_item_padding" >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center_vertical"
                android:text="@string/alarm_repeat"
                android:textColor="@color/news_font_color"
                android:textSize="16sp" />
            <TextView
                android:id="@+id/sub_weekdays"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center_vertical"
                android:textColor="@color/setting_font_color"
                android:textSize="14sp" />
        </FrameLayout>
        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="@color/news_divide" />
        <FrameLayout
            android:id="@+id/setting_ringtone"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/alarm_item_height"
            android:clickable="true"
            android:descendantFocusability="blocksDescendants"
            android:paddingLeft="@dimen/alarm_item_padding"
            android:paddingRight="@dimen/alarm_item_padding" >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center_vertical"
                android:text="@string/alarm_ringtone"
                android:textColor="@color/news_font_color"
                android:textSize="16sp" />
            <TextView
                android:id="@+id/sub_ringtone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center_vertical"
                android:textColor="@color/setting_font_color"
                android:textSize="14sp" />
        </FrameLayout>
        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="@color/news_divide" />
        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="@dimen/alarm_item_height"
            android:paddingLeft="@dimen/alarm_item_padding" >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center_vertical"
                android:text="@string/alarm_vibrate"
                android:textColor="@color/news_font_color"
                android:textSize="16sp" />
            <CheckBox
                android:id="@+id/sub_vibrate"
                style="@style/checkBoxstyle"
                android:layout_gravity="right|center_vertical"
                android:layout_marginRight="15dip"
                android:checked="true" />
        </FrameLayout>
        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="@color/news_divide" />
    </LinearLayout>
</RelativeLayout>